# mc-coin-bot

./: .claudeignore  .coverage  .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.yaml  .test_durations  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  pyrightconfig.json
.claude/: CLAUDE.md  settings.json
.claude/agents/: ci-gate.md  data-doctor.md  eda-debugger.md
.claude/hooks/: tdd-green-guard.sh
.claude/rules/: architecture.md  backtest.md  code-quality.md  commands.md  common-mistakes.md  data.md  eda.md  exchange.md  lint.md  models.md  python-standards.md  strategy.md  tdd.md  testing-standards.md  testing.md  trading-standards.md
.cursor.archived/rules/: 00-engineering-principles.mdc  01-project-structure.mdc  10-python-standards.mdc  11-pydantic-modeling.mdc  13-ruff-compliance.mdc  15-logging-standards.mdc  18-typer-cli.mdc  21-data-visualization.mdc  23-exception-handling.mdc  24-documentation-standards.mdc  25-quantstats-standards.mdc  AGENTS.md
.cursor/rules/: 01-project-structure.mdc  02-clean-code-principles.mdc  12-data-engineering.mdc  13-ruff-compliance.mdc  14-ccxt-trading.mdc  16-basedpyright-typing.mdc  16-pyright-typing.mdc  17-testing-standards.mdc  18-typer-cli.mdc  19-git-security.mdc  21-data-visualization.mdc  22-notification-standards.mdc  26-vectorbt-standards.mdc  27-commenting-standards.mdc  AGENTS.md
.github/workflows/: ci.yml
audits/actions/: 001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml
audits/findings/: 001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml  009.yaml  010.yaml
audits/snapshots/: 2026-02-13.yaml
catalogs/: datasets.yaml  failure_patterns.yaml  indicators.yaml
config/: anchor-mom_g5_1y.yaml  bb-rsi.yaml  cap-flow-mom_p7_1y.yaml  carry-regime-12h_p7_1y.yaml  copula-pairs.yaml  ctrend.yaml  ctrend_g5_1y.yaml  ctrend_g5_2y.yaml  ctrend_sol.yaml  default.yaml  donch-multi_p7_1y.yaml  donchian-ensemble.yaml  enhanced-tsmom.yaml  ensemble-example.yaml  funding-carry.yaml  gk-breakout.yaml  har-vol.yaml  kama.yaml  macro-context-trend-12h_p7_1y.yaml  mad-channel-trend_p7_1y.yaml  multi-factor.yaml  orchestrator-dd-derisk.yaml  orchestrator-example.yaml  orchestrator-live.yaml  orchestrator-rolling-sharpe.yaml  orchestrator-rs-dd.yaml  paper.yaml  regime-tsmom.yaml  spot_supertrend.yaml  supertrend_avax.yaml  supertrend_bnb.yaml  supertrend_btc.yaml  supertrend_btc_4h.yaml  supertrend_doge.yaml  supertrend_eth.yaml  supertrend_link.yaml  supertrend_sol.yaml  tier1_adx_regime.yaml  tier1_max_min.yaml  tier1_overnight.yaml  (+23 more)
config/sweep_vwap/: vwap_bm1.5_et0.2.yaml  vwap_bm1.5_et0.33.yaml  vwap_bm1.5_et0.5.yaml  (+14 more)
docs/: SKILL.md  STRATEGY_EVALUATION.md  analysis-vw-tsmom-low-beta.md  backtest-metrics-guide.md  backtesting-best-practices.md  data-collection.md  eda-audit-fixes.md  eda-orchestrator.md  eda-vs-vbt-comparison.md  exchange-safety-stop.md  monitoring.md  notification.md  pod-lifecycle.md  portfolio-manager.md  regime-system.md  strategy-candidates-2026-02.md  strategy-development-guidelines.md  strategy-evaluation-standard.md  strategy-implementation-plan.md  strategy-orchestrator.md  strategy-pipeline.md
gates/: criteria.yaml  phase-criteria.yaml
lessons/: 001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml  009.yaml  010.yaml  011.yaml  012.yaml  013.yaml  014.yaml  015.yaml  016.yaml  017.yaml  018.yaml  019.yaml  020.yaml  021.yaml  022.yaml  023.yaml  024.yaml  025.yaml  026.yaml  027.yaml  028.yaml  029.yaml  030.yaml  031.yaml  032.yaml  033.yaml  034.yaml  035.yaml  036.yaml  037.yaml  038.yaml  039.yaml  040.yaml  (+62 more)
monitoring/: Dockerfile.grafana  Dockerfile.prometheus  alertmanager.yml  alerts.yml  prometheus.yml
reports/: backtest_20260202_011728.html  backtest_20260202_011906.html  backtest_20260202_015648.html  backtest_20260202_015726.html  backtest_20260202_020203.html  backtest_20260203_004939.html
results/: bulk_backtest_results.json  gate1_multitf_results.json  gate1_pipeline_results.json  gate1_results.json  gate1_tier7_results.json  gate2_validation_results.json  gate3_param_sweep.json
scripts/: bulk_backtest.py  bulk_validate.py  compare_asset_allocation.py  compare_regime_detectors.py  eda_vs_vbt_comparison.py  evaluate_regime_detector.py  gate1_batch6.py  gate1_batch9_testing.py  gate1_onchain_strategies.py  gate1_pipeline.py  gate1_tier7_backtest.py  gate2_validate.py  gate3_param_sweep.py  generate_scorecards.py  healthcheck.py  migrate_lessons.py  migrate_v1_to_v2.py  multi_asset_hedge_sweep.py  multi_asset_risk_sweep.py  multi_asset_vol_leverage_sweep.py  multi_timeframe_sweep.py  p4a_bulk_backtest.py  st_adx_20assets_12h_backtest.py  st_adx_6assets_param_compare.py  st_adx_8assets_final.py  st_adx_btc_12h_backtest.py  st_v11_full_short_backtest.py  st_v11_multi_tf_backtest.py  st_v11_p5_robustness.py  st_v11_pm_protected_backtest.py  st_v11_pyramid_backtest.py  st_v11_universe_scan.py  stitch_matic_pol.py  sweep_asset_allocation.py  sweep_lev_sl.py  sweep_sl_ts.py  test_migrate_v1_to_v2.py  tier2_multi_coin_comparison.py  tri_channel_20assets.py  update_scorecards_g2.py
src/: __init__.py
strategies/: ac-regime.yaml  accel-conv.yaml  accel-skew.yaml  accel-vol-trend.yaml  adaptive-breakout.yaml  adaptive-fr-carry.yaml  adx-regime.yaml  anchor-mom.yaml  anti-corr-mom.yaml  aroc-mom.yaml  asym-semivar-mr.yaml  asym-vol-resp.yaml  asymmetric-trend-8h.yaml  atf-3h.yaml  autocorr-mom.yaml  basis-momentum.yaml  bb-rsi.yaml  btc-lead.yaml  candle-conv-mom.yaml  candle-reject.yaml  cap-flow-mom.yaml  cap-wick-rev.yaml  carry-cond-mom.yaml  carry-mom-convergence.yaml  carry-regime-12h.yaml  carry-sent.yaml  cascade-mom.yaml  cci-consensus.yaml  cft-2h.yaml  cgo-mom.yaml  cmf-persist.yaml  comp-mom.yaml  complexity-trend.yaml  conviction-trend-composite.yaml  copula-pairs.yaml  cost-channel-6h.yaml  ctrend-x.yaml  ctrend.yaml  cvd-diverge-8h.yaml  dd-recovery-phase.yaml  (+154 more)
tests/: __init__.py  checklist.md  conftest.py  crypto-anti-patterns.md
(+2496 files in other folders)
