[project]
name = "mc-coin-bot"
version = "0.1.0"
description = "2026 Crypto Quant Trading System - Event-Driven Architecture based automated trading bot"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "MC Coin Bot Team" }]
keywords = ["cryptocurrency", "trading", "quant", "bot", "binance"]

dependencies = [
    # Exchange API
    "ccxt>=4.0.0",
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0", # Parquet support
    "duckdb>=0.10.0", # [ADD] 대용량 데이터 처리용 (Rules #12 준수)
    # Technical Indicators
    "pandas-ta>=0.3.14b",
    # Data Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Async Support
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
    # Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    # Logging
    "loguru>=0.7.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    # Telegram Alerts
    "python-telegram-bot>=21.0",
    # Retry & Progress (Data Ingestion)
    "tenacity>=8.2.0", # Exponential backoff retry
    "tqdm>=4.66.0", # Progress bar
    "ipykernel>=7.1.0",
]

[project.scripts]
mc-bot = "src.live.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================
# 의존성 그룹 관리 (UV 표준 방식)
# ============================================
# [변경 2] optional-dependencies를 제거하고 dependency-groups로 통합

[dependency-groups]
# 개발용 도구 (테스트, 린팅) -> uv run --group dev ...
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.14", # 버전 통일됨
    "pre-commit>=4.0.0",
    "basedpyright>=1.37.3",
]

# 연구/분석용 도구 (노트북, 백테스팅) -> uv run --group research ...
research = [
    "ipykernel>=7.1.0", # [이동됨] 노트북 실행용 커널
    "vectorbt>=0.26.0",
    "numba>=0.59.0",
    "optuna>=3.5.0",
    "jupyterlab>=4.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "quantstats>=0.0.81",
]


[tool.ruff]
target-version = "py313"
line-length = 100
cache-dir = "~/.cache/ruff"

# Exclude common directories
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "venv",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors (표준 에러)
    "W",     # pycodestyle warnings (표준 경고)
    "F",     # pyflakes (논리적 오류, 미사용 변수 등)
    "I",     # isort (import 정렬)
    "B",     # flake8-bugbear (잠재적 버그 탐지)
    "UP",    # pyupgrade (최신 문법으로 자동 변환)
    "N",     # pep8-naming (함수/변수/클래스 네이밍 컨벤션)
    "SIM",   # flake8-simplify (코드 단순화 제안)
    "C4",    # flake8-comprehensions (리스트 컴프리헨션 최적화)
    "ASYNC", # flake8-async (비동기 코드 안티패턴 탐지)
    "S",     # flake8-bandit (보안 취약점 탐지)
    "RUF",   # Ruff-specific rules (Ruff 자체 규칙)
    "PERF",  # Perflint (성능 안티패턴 탐지)
    "LOG",   # flake8-logging (로깅 모범 사례)
    "TC",    # flake8-type-checking (타입 체킹 최적화)
    "PTH",   # flake8-use-pathlib (pathlib 사용 권장)
    "PD",   # pandas-vet (Pandas 모범 사례 강제 - Rules #12)
    "TRY",  # tryceratops (예외 처리 강화 - Rules #10)
    "PL",   # Pylint (코드 복잡도 및 리팩토링 제안)
    "ISC",  # flake8-implicit-str-concat (암시적 문자열 연결 방지)
]

ignore = [
    "E501",   # 줄 길이는 ruff format이 알아서 처리하므로 lint 에러는 무시
    "B008",   # FastAPI의 Depends() 사용 시 함수 호출 인자 허용
    "S101",   # assert 사용 허용 (테스트 코드에서 필요)
    "S311",   # random 모듈 사용 허용 (보안이 필요 없는 경우)
    "RUF012", # 클래스 변수 타입 어노테이션 강제 완화
    "TRY003", # 긴 에러 메시지를 예외 클래스에 직접 넣기 금지 -> 허용 (빠른 개발 위해)
    "ISC003", # basedpyright의 reportImplicitStringConcatenation과 충돌하므로 명시적 연결 허용
    "PLR0915",
    "PLR0913",
    "PLC0415",
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# [중요] 특정 파일/폴더에 대한 예외 규칙 적용
[tool.ruff.lint.per-file-ignores]
# 테스트 코드는 보안 검사 및 일부 엄격한 룰 제외
"tests/**/*" = ["S101", "PLR2004", "PD", "N802"]
# 연구용 노트북/스크립트는 print 사용 허용
"research/**/*" = ["T201", "PD"]

# [플러그인별 상세 설정]
[tool.ruff.lint.isort]
combine-as-imports = true   # import 문을 한 줄로 병합
known-first-party = ["src"] # 내부 모듈로 인식할 패키지명

[tool.ruff.format]
# 7. 포매터 설정 (Black 대체)
quote-style = "double"            # 따옴표 스타일 (double 추천)
indent-style = "space"            # 들여쓰기 (space 추천)
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.basedpyright]
# 1. 기본 설정 (Pyright와 동일)
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "tests",
    "research",
    "build",
    "dist"
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"

# 2. 타입 체크 모드
# BasedPyright의 'strict'는 기존 Pyright보다 훨씬 엄격합니다.
# 너무 까다롭다면 'standard'로 낮추는 것을 고려하세요.
typeCheckingMode = "strict"

# 3. BasedPyright 전용 강력한 규칙 (선택 사항)
# True로 설정하면 코드 내의 모든 'Any' 타입을 에러로 처리합니다 (매우 엄격함).
reportAny = false
reportExplicitAny = false

# 4. 실용적 예외 처리 (기존 유지)
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnnecessaryCast = false
reportUnusedImport = false
reportUnusedClass = false
reportUnusedVariable = false

# 5. 안전장치 (기존 유지)
reportImplicitStringConcatenation = true
reportMissingImports = true

# ============================================
# pytest 설정
# ============================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",           # 실패/스킵/에러 요약 표시
    "-q",            # 간결한 출력
    "--strict-markers",  # 미등록 마커 사용 시 에러
    "--tb=short",    # 짧은 트레이스백
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================
# coverage 설정
# ============================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true
