[project]
name = "mc-coin-bot"
version = "0.1.0"
description = "2026 Crypto Quant Trading System - Event-Driven Architecture based automated trading bot"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "MC Coin Bot Team" }]
keywords = ["cryptocurrency", "trading", "quant", "bot", "binance"]

dependencies = [
    # Exchange API
    "ccxt>=4.0.0",
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0", # Parquet support
    "duckdb>=0.10.0", # [ADD] 대용량 데이터 처리용 (Rules #12 준수)
    # Technical Indicators
    "pandas-ta>=0.3.14b",
    # Data Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Async Support
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
    # Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    # Logging
    "loguru>=0.7.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    # Retry & Progress (Data Ingestion)
    "tenacity>=8.2.0", # Exponential backoff retry
    "tqdm>=4.66.0", # Progress bar
    "ipykernel>=7.1.0",
    "hmmlearn>=0.3.3",
    "discord-py>=2.6.0",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.8.0",
    "prometheus-client>=0.24.1",
    "matplotlib>=3.10.8",
]

[project.scripts]
mc-bot = "src.live.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================
# 의존성 그룹 관리 (UV 표준 방식)
# ============================================
# [변경 2] optional-dependencies를 제거하고 dependency-groups로 통합

[dependency-groups]
# 개발용 도구 (테스트, 린팅) -> uv run --group dev ...
# 타입 체크는 VSCode + Pylance (pyproject.toml [tool.pyright] 섹션 참조)
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.14",
    "pre-commit>=4.0.0",
    "pyright>=1.1.408",
]

# 연구/분석용 도구 (노트북, 백테스팅) -> uv run --group research ...
research = [
    "ipykernel>=7.1.0", # [이동됨] 노트북 실행용 커널
    "vectorbt>=0.26.0",
    "numba>=0.59.0",
    "optuna>=3.5.0",
    "jupyterlab>=4.1.0",
    "seaborn>=0.13.0",  # matplotlib는 메인 의존성으로 이동
    "plotly>=5.18.0",
    "quantstats>=0.0.81",
]


[tool.ruff]
target-version = "py313"
line-length = 100
cache-dir = "~/.cache/ruff"

# Exclude common directories
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "venv",
    "*.egg-info",
]

[tool.ruff.lint]
preview = true                 # preview rule 활성화 (UP042 등)
explicit-preview-rules = true  # 명시된 preview rule만 활성화

select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes (논리 오류, 미사용 변수)
    "I",     # isort (import 정렬)
    "B",     # flake8-bugbear (잠재적 버그)
    "UP",    # pyupgrade (최신 Python 문법)
    "UP042", # replace-str-enum: (str, Enum) → StrEnum (preview)
    "N",     # pep8-naming (네이밍 컨벤션)
    "SIM",   # flake8-simplify (코드 단순화)
    "C4",    # flake8-comprehensions (컴프리헨션 최적화)
    "ASYNC", # flake8-async (비동기 안티패턴)
    "S",     # flake8-bandit (보안 취약점)
    "RUF",   # Ruff-specific rules
    "PERF",  # Perflint (성능 최적화)
    "LOG",   # flake8-logging (로깅 모범 사례)
    "TC",    # flake8-type-checking (TYPE_CHECKING 블록 최적화)
    "PTH",   # flake8-use-pathlib (pathlib 권장)
    "PD",    # pandas-vet (Pandas 모범 사례)
    "TRY",   # tryceratops (예외 처리)
    "PL",    # Pylint (복잡도, 리팩토링)
    "ISC",   # flake8-implicit-str-concat (암시적 문자열 연결 방지)
    "FURB",  # refurb (2026 최신 리팩토링 제안)
    "SLOT",  # flake8-slots (__slots__ 최적화)
]

ignore = [
    "E501",   # 줄 길이는 ruff format이 처리
    "B008",   # FastAPI Depends() 함수 호출 인자 허용
    "S101",   # assert 사용 허용 (테스트 필요)
    "S311",   # random 모듈 사용 허용
    "RUF012", # 클래스 변수 타입 어노테이션 완화
    "TRY003", # 긴 에러 메시지 허용 (빠른 개발)
    "ISC003", # 명시적 문자열 연결 허용
    "PLR0915", # 함수 내 문장 수 제한 완화
    "PLR0913", # 함수 인자 수 제한 완화
    "PLC0415", # import 위치 제한 완화
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# [중요] 특정 파일/폴더에 대한 예외 규칙 적용
[tool.ruff.lint.per-file-ignores]
# 테스트 코드는 보안 검사 및 일부 엄격한 룰 제외
"tests/**/*" = ["S101", "S105", "S106", "SLF001", "PLR2004", "PD", "N802", "TC001", "TC003"]
# 연구용 노트북/스크립트는 print 사용 허용
"research/**/*" = ["T201", "PD"]
# 전략 __init__.py는 side effect import로 전략 자동 등록
"src/strategy/__init__.py" = ["F401"]
# Pipeline models: date는 Pydantic field annotation 런타임 필요, PASS는 enum 값
"src/pipeline/models.py" = ["TC003", "S105"]
# Lesson models: date는 Pydantic field annotation 런타임 필요
"src/pipeline/lesson_models.py" = ["TC003"]
# Gate models: StrEnum은 Pydantic field annotation 런타임 필요
"src/pipeline/gate_models.py" = ["TC003"]
# Pipeline report: StrategyStore 런타임 필요
"src/pipeline/report.py" = ["TC001"]
# 스크립트는 로거 설정 후 import, 매직넘버, print 허용
"scripts/**/*" = ["E402", "PLR2004", "RUF001", "RUF002", "RUF003", "TRY300", "T201"]

# [플러그인별 상세 설정]
[tool.ruff.lint.isort]
combine-as-imports = true   # import 문을 한 줄로 병합
known-first-party = ["src"] # 내부 모듈로 인식할 패키지명

[tool.ruff.format]
# 7. 포매터 설정 (Black 대체)
quote-style = "double"            # 따옴표 스타일 (double 추천)
indent-style = "space"            # 들여쓰기 (space 추천)
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================
# Pyright (VSCode Pylance) 타입 체크 설정
# ============================================
[tool.pyright]
# 1. 기본 설정
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "tests",
    "research",
    "build",
    "dist",
    ".venv"
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
pythonPlatform = "All"

# 2. 타입 체크 모드 (strict - .vscode/settings.json과 동일)
typeCheckingMode = "strict"

# 3. 엄격한 타입 체크 규칙
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true

# 4. 실용적 예외 처리 (개발 편의성)
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnnecessaryCast = false

# 5. 경고 수준 설정 (VSCode 문제 패널 표시)
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedVariable = "warning"

# 6. 안전장치 (에러로 처리)
reportImplicitStringConcatenation = true
reportMissingImports = "error"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"

# 7. Python 3.13 최신 기능
enableTypeIgnoreComments = true

# ============================================
# pytest 설정
# ============================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",           # 실패/스킵/에러 요약 표시
    "-q",            # 간결한 출력
    "--strict-markers",  # 미등록 마커 사용 시 에러
    "--tb=short",    # 짧은 트레이스백
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================
# coverage 설정
# ============================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true
